Change name from subhub to taskhub

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -20,7 +20,7 @@
           />
           <!-- Darker blue -->
 
-          <!-- Text for "SubHub" -->
+          <!-- Text for "TaskHub" -->
           <text
             x="60"
             y="40"
@@ -31,7 +31,7 @@
             text-anchor="middle"
             alignment-baseline="middle"
           >
-            SubHub
+            TaskHub
           </text>
         </svg>
       </a>
@@ -43,7 +43,7 @@
           <h5>Contact Us</h5>
         </a>
         <ul class="list-unstyled">
-          <li>Email: info@subhub.com</li>
+          <li>Email: info@TaskHub.com</li>
           <li>Phone: +44 20 1234 5678</li>
         </ul>
       </div>
@@ -52,7 +52,7 @@
         <ul class="list-inline">
           <li class="list-inline-item">
             <a
-              href="https://www.instagram.com/subhub"
+              href="https://www.instagram.com/"
               target="_blank"
               class="icon-instagram social-media-icon"
               aria-label="instagram-icon"
@@ -61,7 +61,7 @@
           </li>
           <li class="list-inline-item">
             <a
-              href="https://www.messenger.com/subhub"
+              href="https://www.messenger.com/"
               target="_blank"
               class="icon-messenger social-media-icon"
               aria-label="messenger-icon"
@@ -89,7 +89,7 @@
               margin-top: 1.5rem;
             "
           >
-            &copy; 2024 SubHub. All rights reserved.
+            &copy; 2024 TaskHub. All rights reserved.
           </p>
         </div>
       </div>
