--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,24 +1,25 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load allauth i18n %}
 {% block head_title %}
     {% trans "Signup" %}
 {% endblock head_title %}
 {% block content %}
-    {% element h1 %}
+<div class="signup-form">
+    <h1 class="sign-h1">
         {% trans "Sign Up" %}
-    {% endelement %}
+    </h1>
     {% setvar link %}
         <a href="{{ login_url }}">
         {% endsetvar %}
         {% setvar end_link %}
         </a>
     {% endsetvar %}
-    {% element p %}
-        {% blocktranslate %}Already have an account? Then please {{ link }}sign in{{ end_link }}.{% endblocktranslate %}
-    {% endelement %}
+    <p>{% blocktranslate %}Already have an account? Then please {{ link }}sign in{{ end_link }}.{% endblocktranslate %}</p>
     {% if not SOCIALACCOUNT_ONLY %}
+    
         {% url 'account_signup' as action_url %}
-        {% element form form=form method="post" action=action_url tags="entrance,signup" %}
+        <div class="form-element">
+            {% element form form=form method="post" action=action_url tags="entrance,signup" %}
             {% slot body %}
                 {% csrf_token %}
                 {% element fields form=form unlabeled=True %}
@@ -26,13 +27,15 @@
                 {{ redirect_field }}
             {% endslot %}
             {% slot actions %}
-                {% element button tags="prominent,signup" type="submit" %}
-                    {% trans "Sign Up" %}
-                {% endelement %}
+            <button class="btn btn-signup right" type="submit">{% trans "Sign Up" %}</button>
+        
             {% endslot %}
         {% endelement %}
+        </div>
+       
     {% endif %}
     {% if SOCIALACCOUNT_ENABLED %}
         {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
     {% endif %}
+</div>
 {% endblock content %}
