--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,10 +21,11 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
                     </li>
-                    {% comment %} {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
+                    {% comment %} 
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
-                    </li>
+                    </li> {% endcomment %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                     </li>
@@ -36,9 +37,9 @@
                         <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == 'contact/' %}active{% endif %}" href="#contact">Contact Us</a>
+                        <a class="nav-link {% if request.path == '/contact/' %}active{% endif %}" href="#contact">Contact Us</a>
                     </li>
-                    {% endif %} {% endcomment %}
+                    {% endif %}
                 </ul>
             </div>
         </div>
