--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -21,7 +21,7 @@
         <div class="col-md-8 mt-3 offset-md-2 center-form-elements">
             <form class="login center-form-elements" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
