--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -22,10 +22,13 @@
                         <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
                     </li>
                     {% if user.is_authenticated %}
-                    {% comment %} 
+                   
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
-                    </li> {% endcomment %}
+                        <a class="nav-link {% if request.path == '/task_list/' %}active{% endif %}" href="{% url 'task_list' %}">Dashboard</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/create_task/' %}active{% endif %}" href="{% url 'create_task' %}">Add Task</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                     </li>
