--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,6 +1,6 @@
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-custom">
+    <nav class="navbar navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand"  href="{% url 'home' %}">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 75" width="120" height="75">
@@ -47,4 +47,5 @@
             </div>
         </div>
     </nav>
+
 </header>
