--- a/tasks/templates/tasks/update_task.html
+++ b/tasks/templates/tasks/update_task.html
@@ -3,11 +3,15 @@
 {% block title %}Update Task{% endblock %}
 
 {% block content %}
+<div class="container">
     <h2>Update Task</h2>
-    <form method="post" novalidate>
+    <form method="post" enctype="multipart/form-data" class="p-2 form" novalidate>
         {% csrf_token %}
-        {{ form|crispy }}
+        <div class="form-group">
+            {{ form|crispy }}
+        </div>
         <button type="submit" class="btn btn-primary">Update Task</button>
         <a href="{% url 'task_detail' pk=task.pk %}" class="btn btn-secondary">Cancel</a>
     </form>
+</div>
 {% endblock %}
