Add margin-top to footer

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-darkblue py-4">
+<footer class="bg-darkblue py-4 mt-5">
   <div class="container">
     <div class="col-md-6">
       <a class="navbar-brand" href="{% url 'home' %}" aria-label='Opens home page'>
