--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -27,6 +27,9 @@
                         <a class="nav-link {% if request.path == '/task_list/' %}active{% endif %}" href="{% url 'task_list' %}">Dashboard</a>
                     </li> 
                     <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/category_list/' %}active{% endif %}" href="{% url 'category_list' %}">Category List</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if request.path == '/create_task/' %}active{% endif %}" href="{% url 'create_task' %}">Add Task</a>
                     </li>
                     <li class="nav-item">
