--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@
     --secondary-color: #2a2b2e; /* Dark Gray */
     --text-color: #2a2b2e; /* Dark Gray */
     --hover-color: #005580; /* dark blue*/
+    --hover-nav-color: #00FFFF;
     --header-font: 'Roboto', sans-serif;
     --normal-font: 'Quicksand', sans-serif;
 }
@@ -55,13 +56,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.5rem; 
     display: block; 
     padding: 10px 20px; 
+    border-bottom: 5px solid transparent; /* Transparent border to maintain space */
+    transition: border-bottom 0.3s ease; 
 }
 
 .navbar-custom .navbar-nav .nav-link:hover {
-    background-color: var(--hover-color); 
-    color: var(--primary-color); 
-    border-radius: 10px;
-    transition: ease-in-out 0.5ms
+    border-bottom: 3px solid var(--hover-nav-color); 
+
+    
 }
 
 /* Center the navbar menu in the dropdown */
@@ -78,9 +80,9 @@ h1, h2, h3, h4, h5, h6 {
     width:90vw;
 }
 
-.active{
-    background-color: var(--hover-color); 
-    color: var(--primary-color); 
+.navbar-custom .navbar-nav .nav-link.active {
+    background-color: var(--hover-color);
+    color: var(--primary-color) !important;
     border-radius: 10px;
 }
 /* Customizing footer */
