Use bootstrap to style login page

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,27 +7,28 @@
 
 {% block content %}
 
-<div class="container sign-container login-form text-center">
-    <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
-            <h1 class="sign-h1">{% trans "Sign In" %}</h1>
+<div class="container login-form">
+    <div class="row justify-content-center align-items-center min-vh-100">
+        <div class="col-md-8">
+            <div class="text-center">
+                <h1 class="sign-h1 mt-5">{% trans "Sign In" %}</h1>
 
-            <p class="welcome-back-text">{% blocktrans %}Welcome back to the SubHub. Please Login in to check on your subcriptions. If
-                you have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
-                first.{% endblocktrans %}</p>
-        </div>
-    </div>
-    <div class="row ">
-        <div class="col-md-8 mt-3 offset-md-2 center-form-elements">
-            <form class="login center-form-elements" method="POST" action="{% url 'account_login' %}">
+                <p class="welcome-back-text mb-5">{% blocktrans %}Welcome back to the SubHub. Please login to check on your subscriptions. If
+                    you haven't created an account yet, <a class="link" href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+            </div>
+
+            <form class="center-form-elements" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {{ form|crispy }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+                <button class="btn btn-primary btn-lg btn-block mt-3" type="submit">{% trans "Sign In" %}</button>
             </form>
         </div>
     </div>
 </div>
+
+
+
 {% endblock %}
