--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,19 @@
     <link rel="stylesheet" href="{%static '/css/style.css'%}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!--Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
-    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}">
+    <!-- Link to web manifest -->
+<link rel="manifest" href="https://res.cloudinary.com/dy2jo0fcc/raw/upload/v1716889809/static/favicon_io/site.webmanifest">
+
+<!-- Favicon links -->
+<link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889808/static/favicon_io/favicon.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889807/static/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889806/static/favicon_io/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889805/static/favicon_io/apple-touch-icon.png">
+
+<!-- Android Chrome icons -->
+<link rel="icon" type="image/png" sizes="512x512" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889803/static/favicon_io/android-chrome-512x512.png">
+<link rel="icon" type="image/png" sizes="192x192" href="https://res.cloudinary.com/dy2jo0fcc/image/upload/v1716889803/static/favicon_io/android-chrome-192x192.png">
+
 
 
     {%endblock%}
