--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>TaskHub| Manage Your Tasks</title>
     {%block extra_css%}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="{%static '/css/style.css'%}">
+    <link rel="stylesheet" href="{%static 'css/style.css'%}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Link to web manifest -->
