--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -39,7 +39,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <a name="contact us">
+        <a id="contact us">
           <h5>Contact Us</h5>
         </a>
         <ul class="list-unstyled">
