Change paragraph colour to black

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-12">
                 <h1 class="display-4">Welcome to TaskHub</h1>
-                <p class="lead">Your ultimate task management solution</p>
+                <p class="lead text-dark">Your ultimate task management solution</p>
                 <a href="{% url 'account_signup' %}" class="btn btn-primary btn-lg">Get Started</a>
 
             </div>
