--- a/tasks/templates/category/update_category.html
+++ b/tasks/templates/category/update_category.html
@@ -10,6 +10,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <button type="submit" class="btn btn-primary">Update Category</button>
+                <a href="{% url  'category_list' %}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
     </div>
