--- a/templates/400.html
+++ b/templates/400.html
@@ -7,8 +7,8 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1 class="display-4 mb-4">Bad Request</h1>
-            <p class="lead">The server could not understand the request due to invalid syntax.</p>
+            <h1 class="display-4 mb-4">400 Bad Request</h1>
+            <p class="lead">Taskhub server could not understand the request due to invalid syntax.</p>
             <a href="/" class="btn btn-primary">Back to Home</a>
         </div>
     </div>
