--- a/templates/403.html
+++ b/templates/403.html
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1 class="display-4 mb-4">Forbidden</h1>
+            <h1 class="display-4 mb-4">403 Forbidden</h1>
             <p class="lead">You do not have permission to access this resource.</p>
             <a href="/" class="btn btn-primary">Back to Home</a>
         </div>
