--- a/templates/404.html
+++ b/templates/404.html
@@ -7,7 +7,7 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1 class="display-4 mb-4">Page Not Found</h1>
+            <h1 class="display-4 mb-4">404Page Not Found</h1>
             <p class="lead">We’re sorry, but the requested page could not be found.</p>
             <a href="/" class="btn btn-primary">Back to Home</a>
         </div>
