--- a/templates/500.html
+++ b/templates/500.html
@@ -7,8 +7,8 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8 text-center">
-            <h1 class="display-4 mb-4">Internal Server Error</h1>
-            <p class="lead">The server encountered an internal error or misconfiguration and was unable to complete your request.</p>
+            <h1 class="display-4 mb-4">500 Internal Server Error</h1>
+            <p class="lead">TaskHub is currently unable to handle this request due to internal problems.</p>
             <a href="/" class="btn btn-primary">Back to Home</a>
         </div>
     </div>
